# XeroStark

./: README.md  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  package-lock.json  package.json
backend/.sqlx/: query-0abf189fb586b2a37a857ccaaba2328dd40c71ff7c9696a54bf78010b654b2de.json  query-21652ea8975908de63145e30b6fac0a8b6576d80952de7b6770821605c024cdb.json  query-2d97dc489a74c52e59bdaef2a3a58190ed55a3a8a5c4b17a9680afaf34339aa7.json  query-32a2370b449240a6dfadae9c6e42ce7468619819efadcacd9a1de0d58ac23062.json  query-35963ba7cb506d398ce55053dbf1399588a85960baea97743938c3f9d1847363.json  query-3c065a5edca6076e824d48b80c4a5956d41cfaaff4bdff7c0859bdac3be81186.json  query-3d8234f211b01e020f7123d7b3c096bdb51154af60977e3d9b5c424d084c6164.json  query-46ad85ee6de668f8a465ac7f57c40ab27e42bca80c53612b79131bc012289697.json  query-6834e834651bb9290e8166438a2952a6485c75dc50925fff2dac69d3d03cb323.json  query-6c3e70ff7689652fe68a67e8512ea5a852152ea502763381a61389924865334e.json  query-70ef70f9cf3bf2022865dc469479bc8e4a403a5d29697a6d4cc048ce6c3f4529.json  query-72e658c76ab9824acd1b50ceeb85900e5ddf921dd320102e7a770ebf7f9877d1.json  query-76daec8d068aa800698f330a8a778a47b0e41bd16c2513df367ae579b2c817dc.json  query-78783ece664008050c8edd9a2b1aa30172841137afdeb361f6cfa9b7a51aba53.json  query-81dda895eecdb2effd1e05eacee8c83342cf3ba5dd6ab03e2d3eb064402c74a7.json  query-85ad86e7cc618582c818f4651e034a5d3e5ed54f7d7e2d7d14d544ffa72fd75c.json  query-8daba9c614fccc3e59e66a9edb39e3a5d4bed65d382af1ccc820786cc8fc9bf0.json  (+11 more)
backend/migrations/: 20260202091027_circuits.down.sql  (+17 more)
(+82 files in other folders)
